--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Weather API</h1>
     
     <div>
-      <button type="submit">Search</button>
+      <button type="submit">Get Your Weather Info</button>
     </div>
   </div>  
 </body>
